@@ -41,3 +41,4 @@ with contributions by:
     Roland Hermans <roland.hermans@omroepvenray.nl>
     Sergiy <piratfm@gmail.com>
     Clemens Ladisch <clemens@ladisch.de>
+    Edwin van den Oetelaar <oetelaar.automatisering@gmail.com>
