@@ -1,14 +1,18 @@
 Next release
+    o fixed a bug in BufferedSink.cpp that leads to some buffers 
+	  being written twice, causing corruption of datastream,
+	  thanks to Edwin van den Oetelaar <oetelaar.automatisering@gmail.com>
     o implemented samplerate conversion for all codecs using libsamplerate, 
 	  and keeping internal aflibConverter as fallback,
           thanks to Sergiy <piratfm@gmail.com>
     o bugfix: fix for alsa driver - closes ticked #8
           thanks to Clemens Ladisch <clemens@ladisch.de> 
+
 14-11-2009 Darkice 0.20.1 released
     o added rc.darkice init script
 	  thanks to Niels Dettenbach <nd@syndicat.com>
     o bugfix: fix for gcc 4.4
-	
+
 05-11-2009 Darkice 0.20 released
 
     o new maintainer: Rafael Diniz <rafael@riseup.net>	
